# kubeanno

./: README.md  pyproject.toml
kubeanno/: __init__.py  _annotate.py  _info.py
