[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kubeanno"
description = "Self-Annotate Kubernetes Pods"
requires-python = ">=3.6"
authors = [
  {name = "Sean MacAvaney", email = "sean.macavaney@glasgow.ac.uk"},
]
maintainers = [
  {name = "Sean MacAvaney", email = "sean.macavaney@glasgow.ac.uk"},
]
readme = "README.md"
classifiers = []
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
version = {attr = "kubeanno.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
exclude = ["tests"]

[project.urls]
Repository = "https://github.com/seanmacavaney/kubeanno"
"Bug Tracker" = "https://github.com/seanmacavaney/kubeanno/issues"
